# cinolib-dev

examples/01_trimesh_viewer/: CMakeLists.txt  main.cpp
include/cinolib/io/: read_write.h
subdiv/: CMakeLists.txt  main.cpp  subdivision_cc.cpp  subdivision_cc.h
